--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "8-tws-tp1",
+  "name": "8-tws-tp3",
   "version": "1.0.0",
-  "description": "TP1 for 8-TWS running express & react",
-  "author": "IDOUX Etienne",
+  "description": "TP3 for 8-TWS video chat",
+  "author": "IDOUX Etienne, VIALATOUX Lucas",
   "license": "MIT",
-  "homepage": "https://forge.univ-lyon1.fr/p1923599/8-tws-tp1#readme",
+  "homepage": "https://forge.univ-lyon1.fr/p1923599/8-tws-tp3#readme",
   "engines": {
     "npm": "6.14.7",
     "node": "v14.7.0"
@@ -18,11 +18,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://forge.univ-lyon1.fr/p1923599/8-tws-tp1.git"
+    "url": "https://forge.univ-lyon1.fr/p1923599/8-tws-tp3"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
     "bootstrap": "^4.5.2",
     "express": "^4.17.1",
+    "peer": "^0.6.1",
+    "peerjs": "^1.3.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1"
